# rpgforge-cartographer

./: .gitignore  CMakeLists.txt  LICENSE  main.cpp
domain/entities/: environment.hpp
domain/entities/draw/: color.hpp  point.hpp  trace.hpp
presentation/translations/: cartopgrapher_fr.qm  cartopgrapher_fr.ts
presentation/ui/mainwindow/: mainwindow.cpp  mainwindow.hpp
presentation/ui/map/: mapcanvasview.cpp  mapcanvasview.hpp  mapviewmodel.hpp
presentation/ui/shared/: customwindow.cpp  customwindow.hpp
